--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -79,7 +79,8 @@
                     *ngIf="isLoading">
                     <div
                       class="grid w-full grid-cols-2 gap-4 xl:grid-cols-4">
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium text-gray-500
                             dark:text-gray-400">
@@ -88,7 +89,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium text-gray-500
                             dark:text-gray-400">
@@ -97,7 +99,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium text-gray-500
                             dark:text-gray-400">
@@ -106,7 +109,8 @@
                           </div>
                         </div>
                       </div>
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium text-gray-500
                             dark:text-gray-400">
@@ -121,40 +125,52 @@
                   <div class="w-full" *ngIf="!isLoading">
                     <div
                       class="grid w-full grid-cols-2 gap-4 xl:grid-cols-4">
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium
                             text-warning-500">{{web3Service.getChainSymbol(web3Service.activeChain)}}</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances && accountBalances[i] ? accountBalances[i].gas : 0)}}</div>
+                            text-right">{{utilService.formatNumber(accountBalances
+                            && accountBalances[i] ? accountBalances[i].gas :
+                            0)}}</div>
                         </div>
                       </div>
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium
                             text-warning-500">Unclaimed</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances && accountBalances[i] ? accountBalances[i].unclaimed : 0)}}</div>
+                            text-right">{{utilService.formatNumber(accountBalances
+                            && accountBalances[i] ? accountBalances[i].unclaimed
+                            : 0)}}</div>
                         </div>
                       </div>
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium
                             text-warning-500">Claimable</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances && accountBalances[i] ? accountBalances[i].claimable : 0)}}</div>
+                            text-right">{{utilService.formatNumber(accountBalances
+                            && accountBalances[i] ? accountBalances[i].claimable
+                            : 0)}}</div>
                         </div>
                       </div>
-                      <div class="items-center p-2 border border-2 border-warning-500 rounded">
+                      <div class="items-center p-2 border border-2
+                        border-warning-500 rounded">
                         <div class="flex items-center mb-2">
                           <div class="w-16 text-sm font-medium
                             text-warning-500">Wallet</div>
                           <div class="w-full text-sm font-medium
                             dark:text-white
-                            text-right">{{utilService.formatNumber(accountBalances && accountBalances[i] ? accountBalances[i].wallet : 0)}}</div>
+                            text-right">{{utilService.formatNumber(accountBalances
+                            && accountBalances[i] ? accountBalances[i].wallet :
+                            0)}}</div>
                         </div>
                       </div>
                     </div>
@@ -264,7 +280,8 @@
                               {{char && char.exp ? char.exp : ''}}
                             </td>
                             <td class="px-6 py-4">
-                              {{char && char.data ? utilService.getNextTargetExpLevel(char.data.level).level
+                              {{char && char.data ?
+                              utilService.getNextTargetExpLevel(char.data.level).level
                               + 1 : ''}}
                             </td>
                             <td class="px-6 py-4">
@@ -278,8 +295,9 @@
                 </div>
                 <!-- end character table -->
                 <!-- ads -->
-                <div class="w-full row-span-2 p-2 flex items-center justify-center">
-                    <app-ads type="250x250"></app-ads>
+                <div class="w-full row-span-2 p-2 flex items-center
+                  justify-center">
+                  <app-ads type="250x250"></app-ads>
                 </div>
                 <!-- end ads -->
               </div>
@@ -314,47 +332,34 @@
             </a>
           </li>
         </ul>
+        <hr class="h-px my-2 bg-warning-200 border-0 dark:bg-warning-700">
         <h5 id="groups-label" class="items-center mb-2
           text-base font-semibold text-gray-500 dark:text-gray-400
           text-center">Actions</h5>
-        <ul class="py-2 font-medium" role="none">
-          <li>
-            <a (click)="showNewGroupDrawer()"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
-              dark:text-success dark:hover:bg-gray-600 dark:hover:text-white"
-              role="menuitem">
-              <div class="inline-flex items-center uppercase cursor-pointer">
-                New Group
-              </div>
-            </a>
-          </li>
-          <li>
-            <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700">
-          </li>
-          <li>
-            <a (click)="showManageGroupDrawer()"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
-              dark:text-warning dark:hover:bg-gray-600 dark:hover:text-white"
-              role="menuitem">
-              <div class="inline-flex items-center uppercase cursor-pointer">
-                Manage Group
-              </div>
-            </a>
-          </li>
-          <li>
-            <hr class="h-px bg-gray-200 border-0 dark:bg-gray-700">
-          </li>
-          <li>
-            <a (click)="showAddAccountDrawer()"
-              class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
-              dark:text-warning dark:hover:bg-gray-600 dark:hover:text-white"
-              role="menuitem">
-              <div class="inline-flex items-center uppercase cursor-pointer">
-                Add Account
-              </div>
-            </a>
-          </li>
-        </ul>
+        <button type="button" class="text-white bg-warning-700
+          hover:bg-warning-800
+          w-full focus:ring-4 focus:ring-warning-300 font-medium rounded-lg
+          text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-warning-600
+          dark:hover:bg-warning-700 focus:outline-none
+          dark:focus:ring-warning-800
+          block" (click)="showManageGroupDrawer()">Manage Group</button>
+        <button type="button" class="text-white bg-success-700
+          hover:bg-success-800
+          w-full focus:ring-4 focus:ring-success-300 font-medium rounded-lg
+          text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-success-600
+          dark:hover:bg-success-700 focus:outline-none
+          dark:focus:ring-success-800
+          block" (click)="showNewGroupDrawer()">New Group</button>
+
+        <hr class="h-px my-4 bg-warning-200 border-0 dark:bg-warning-700">
+
+        <button type="button" class="text-white bg-primary-700
+          hover:bg-primary-800
+          w-full focus:ring-4 focus:ring-primary-300 font-medium rounded-lg
+          text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-primary-600
+          dark:hover:bg-primary-700 focus:outline-none
+          dark:focus:ring-primary-800
+          block" (click)="showAddAccountDrawer()">Add Account</button>
       </div>
       <!-- end groups drawer -->
 
@@ -534,13 +539,16 @@
             hover:bg-warning-800
             w-full focus:ring-4 focus:ring-warning-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-warning-600
-            dark:hover:bg-warning-700 focus:outline-none dark:focus:ring-warning-800
-            block" (click)="showCombatDrawer()" [disabled]="isLoading" [innerHTML]="isLoading ? 'Loading data...' : 'Combat Simulator'"></button>
-            <button type="button" class="text-white bg-success-700
+            dark:hover:bg-warning-700 focus:outline-none
+            dark:focus:ring-warning-800
+            block" (click)="showCombatDrawer()" [disabled]="isLoading"
+            [innerHTML]="isLoading ? 'Loading data...' : 'Combat Simulator'"></button>
+          <button type="button" class="text-white bg-success-700
             hover:bg-success-800
             w-full focus:ring-4 focus:ring-success-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-success-600
-            dark:hover:bg-success-700 focus:outline-none dark:focus:ring-success-800
+            dark:hover:bg-success-700 focus:outline-none
+            dark:focus:ring-success-800
             block" (click)="showLogsDrawer()">Fight Logs</button>
           <hr class="h-px my-5 bg-gray-200 border-0 dark:bg-gray-700">
           <button type="button" class="text-white bg-danger-700 bottom-0
@@ -569,28 +577,34 @@
             <label for="input-character" class="block mb-2 text-sm
               font-medium
               text-warning-500">Character</label>
-              <select id="input-character" data-te-select-init data-te-select-filter="true" class="">
-                <option [value]="char.data.id" *ngFor="let char of accountChars[activeAccountIndex]">{{char.data.id}} | {{char.data.traitName}} | Lv. {{char.data.level + 1}} | {{char.stamina}}/200</option>
-              </select>
+            <select id="input-character" data-te-select-init
+              data-te-select-filter="true" class="">
+              <option [value]="char.data.id" *ngFor="let char of
+                accountChars[activeAccountIndex]">{{char.data.id}} |
+                {{char.data.traitName}} | Lv. {{char.data.level + 1}} |
+                {{char.stamina}}/200</option>
+            </select>
           </div>
           <div class="mb-6">
             <label for="input-multiplier" class="block mb-2 text-sm
               font-medium
               text-warning-500">Stamina</label>
-              <select id="input-multiplier" data-te-select-init data-te-select-filter="true" class="">
-                <option value="1">40</option>
-                <option value="2">80</option>
-                <option value="3">120</option>
-                <option value="4">160</option>
-                <option value="5">200</option>
-              </select>
+            <select id="input-multiplier" data-te-select-init
+              data-te-select-filter="true" class="">
+              <option value="1">40</option>
+              <option value="2">80</option>
+              <option value="3">120</option>
+              <option value="4">160</option>
+              <option value="5">200</option>
+            </select>
           </div>
           <button type="button" class="text-white bg-blue-700
             hover:bg-blue-800
             w-full focus:ring-4 focus:ring-blue-300 font-medium rounded-lg
             text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-blue-600
             dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800
-            block" (click)="simulateCombat()" [disabled]="simulating">{{simulating ? 'Simulating...' : 'Simulate'}}</button>
+            block" (click)="simulateCombat()" [disabled]="simulating">{{simulating
+            ? 'Simulating...' : 'Simulate'}}</button>
           <hr class="h-px my-5 bg-gray-200 border-0 dark:bg-gray-700">
         </form>
       </div>
