--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -16,12 +16,14 @@
         class="relative inline-flex items-center text-gray-500
         dark:text-gray-400 hover:bg-gray-100
         dark:hover:bg-gray-700 focus:outline-none focus:ring-4
-        focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 mr-1.5"
+        focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5
+        mr-1.5"
         (click)="showAlerts()">
         <svg fill="#ffffff" class="w-5 h-5" version="1.1"
           id="Capa_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 611.999
-          611.999" xml:space="preserve" stroke="#ffffff" *ngIf="configService.theme === 'dark'"><g
+          611.999" xml:space="preserve" stroke="#ffffff"
+          *ngIf="configService.theme === 'dark'"><g
             id="SVGRepo_bgCarrier" stroke-width="0"></g><g
             id="SVGRepo_tracerCarrier" stroke-linecap="round"
             stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g>
@@ -48,7 +50,8 @@
         <svg fill="#000000" class="w-5 h-5" version="1.1"
           id="Capa_1" xmlns="http://www.w3.org/2000/svg"
           xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 611.999
-          611.999" xml:space="preserve" stroke="#000000" *ngIf="configService.theme === 'light'"><g
+          611.999" xml:space="preserve" stroke="#000000"
+          *ngIf="configService.theme === 'light'"><g
             id="SVGRepo_bgCarrier" stroke-width="0"></g><g
             id="SVGRepo_tracerCarrier" stroke-linecap="round"
             stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <g> <g>
@@ -74,7 +77,8 @@
                 </g> </g> </g> </g></svg>
         <div class="absolute inline-flex items-center justify-center w-6 h-6
           text-xs font-bold text-white bg-red-500 border-2 border-white
-          rounded-full -top-1 -right-1 dark:border-gray-900" *ngIf="alerts.length > 0">{{alerts.length}}</div>
+          rounded-full -top-1 -right-1 dark:border-gray-900"
+          *ngIf="alerts.length> 0">{{alerts.length}}</div>
       </button>
       <!-- end alerts -->
       <!-- theme switch -->
@@ -178,7 +182,8 @@
           <li *ngFor="let currency of currencyService.currencies">
             <a [id]="'select-currency-' + currency"
               (click)="setCurrency(currency)"
-              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700
+              hover:bg-gray-100
               dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
               <div class="inline-flex items-center uppercase">
@@ -203,7 +208,8 @@
         <ul class="py-2 font-medium" role="none">
           <li *ngFor="let chain of web3Service.chains">
             <a [id]="'select-chain-' + chain" (click)="setChain(chain)"
-              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700
+              hover:bg-gray-100
               dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
               <div class="inline-flex items-center">
@@ -404,7 +410,8 @@
           <li *ngFor="let alert of alerts">
             <a [id]="'select-currency-' + alert.id"
               (click)="showAlertContent(alert.id)"
-              class="cursor-pointer block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100
+              class="cursor-pointer block px-4 py-2 text-sm text-gray-700
+              hover:bg-gray-100
               dark:text-gray-400 dark:hover:bg-gray-600 dark:hover:text-white"
               role="menuitem">
               <div class="inline-flex items-center uppercase">
@@ -495,3 +502,29 @@
     </div>
   </div>
 </nav>
+
+<!-- Main modal -->
+<div id="paypal-modal" tabindex="-1" aria-hidden="true" class="fixed
+  top-0 left-0 right-0 z-50 hidden w-full p-4 overflow-x-hidden overflow-y-auto
+  md:inset-0 h-[calc(100%-1rem)] max-h-full">
+  <div class="relative w-full max-w-md max-h-full">
+    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+      <button type="button" class="absolute top-3 right-2.5 text-gray-400
+        bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm
+        p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-800
+        dark:hover:text-white" (click)="paypalModal.hide()">
+        <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0
+          20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414
+            1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293
+            4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"></path></svg>
+        <span class="sr-only">Close modal</span>
+      </button>
+      <div class="px-6 py-6 lg:px-8">
+        <h3 class="mb-4 text-xl font-medium text-gray-900 dark:text-white">Pay with PayPal</h3>
+        <ngx-paypal [config]="payPalConfig"></ngx-paypal>
+      </div>
+    </div>
+  </div>
+</div>
