--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -500,7 +500,7 @@
         </li>
         <li>
           <a
-            routerLink="/privacy"
+            href="/privacy"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
             md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
             dark:text-white md:dark:hover:text-warning-500
@@ -509,7 +509,7 @@
         </li>
         <li>
           <a
-            routerLink="/terms"
+          href="/terms"
             class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100
             md:hover:bg-transparent md:border-0 md:hover:text-warning-700 md:p-0
             dark:text-white md:dark:hover:text-warning-500
