--- a/src/app/includes/navbar/navbar.component.html
+++ b/src/app/includes/navbar/navbar.component.html
@@ -78,7 +78,7 @@
         <div class="absolute inline-flex items-center justify-center w-6 h-6
           text-xs font-bold text-white bg-red-500 border-2 border-white
           rounded-full -top-1 -right-1 dark:border-gray-900"
-          *ngIf="alerts.length> 0">{{alerts.length}}</div>
+          *ngIf="alerts && alerts.length> 0">{{alerts.length}}</div>
       </button>
       <!-- end alerts -->
       <!-- theme switch -->
